--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <head>
-    <!-- for optimal display on high DPI devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/core/index.min.css" />
 </head>
 
 <script src="https://cdn.jsdelivr.net/npm/three/build/three.min.js"></script>
-<script src="./sphere.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@photo-sphere-viewer/core/index.js"></script>
 
-<!-- the viewer container must have a defined size -->
-<div id="viewer" style="width: 100vw; height: 100vh;"></div>
-
+<div id="viewer" style="width: 100%; height: 100%;"></div>
 <script>
+
     const viewer = new PhotoSphereViewer.Viewer({
         container: document.querySelector('#viewer'),
         panorama: 'https://photo-sphere-viewer-data.netlify.app/assets/sphere.jpg',
+    });
+
+    viewer.addEventListener('click', ({ data }) => {
+        const currentPosition = viewer.getPosition();
+        console.log(currentPosition)
+        console.log(`Click: ${data.yaw}, ${data.pitch}`,);
+
+        const X = data.yaw;
+        const Y = data.pitch;
+        console.log(`X: ${X}\nY:${Y}`)
+        viewer.animate({
+            yaw: X,
+            pitch: Y,
+            speed: 300
+        }, 2000);
     });
 </script>
